fix missing pagination on small screen (#262)

--- a/src/app/components/adf-layout/layout-container.component.scss
+++ b/src/app/components/adf-layout/layout-container.component.scss
@@ -19,6 +19,11 @@ ng-content {
     @include flex-column;
 }
 
+.mat-sidenav-content {
+    @include flex-column;
+    overflow: auto;
+}
+
 .mat-sidenav {
     overflow: hidden;
 }
